--- a/scss/media.scss
+++ b/scss/media.scss
@@ -94,6 +94,7 @@
     flex-direction: column;
     gap: 48px;
     margin-bottom: 82px;
+    overflow: scroll;
 
     &__slides {
       display: flex;
